workloads/authserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authserver
  labels:
    app: authserver
spec:
  type: ClusterIP
  selector:
    app: authserver
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
