workloads/authserver/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authserver-prefixed
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: rots-https
    - name: shared-gateway
      sectionName: prod-rots-https
  hostnames:
    - rots.2143.me
    - prod.rots.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: authserver
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authserver-direct
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: auth-prod-rots-https
  hostnames:
    - auth.prod.rots.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authserver
          port: 80
